--- a/css/style.css
+++ b/css/style.css
@@ -22,4 +22,15 @@
 }
 body{
     background-color:burlywood;
+    font-size: larger;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight:bold;
+    padding: 10px;
+    word-spacing: 5px;
+    line-height: 1.2;
+}
+#centerContainer{
+    position: absolute;
+    top: 30%;
+    left: 35%;
 }
