--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     display: inline-block;
     padding-left: auto;
     color: rgb(172, 2, 157);
+
 }
 .links:hover{
     border-color: rgb(26, 29, 219);
@@ -18,7 +19,21 @@
 .links:focus{
     color: red;
     border-color: red;
-    border-color: red;
+}
+.hyperlink_table{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    text-decoration:none;
+    display: inline-block;
+    color: rgb(8, 8, 68);
+    transition-property: all;
+    transition-duration:0.4s;
+    transition-timing-function:ease-in-out;
+
+}
+.hyperlink_table:hover{
+    text-decoration:underline;
+    color: brown;
+    transform: scale(1.3);
 }
 body{
     background-color:rgb(219, 226, 191);
@@ -29,14 +44,13 @@ body{
     word-spacing: 4px;
     line-height: 1.2;
 }
-p, ul, ol, dl, table{
+p, ul, dl, ol{
     background-color:rgb(255, 255, 255);
-    display: inline-block;
     border-radius: 10px;
 }
-ol{
-    border-style: solid;
-    border-color: aliceblue;
+table{
+    background-color:rgb(223, 232, 244);
+    border-radius: 10px;
 }
 #centerContainer{
     position: absolute;
