spelling mistake correction in notes

--- a/css/css1.css
+++ b/css/css1.css
@@ -127,5 +127,5 @@ value : inline / block / inline - block / none
 
 /*
 Alpha Channel
-rgpba : where a  is for "aplha chanel" it decides the opacitiy
+rgpba : where a  is for "alpha chanel" it decides the opacitiy
 */
