--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 .hyperlink-as-button{  
-    border: 3px , solid, rgb(15, 15, 12);
+    border: 3px solid rgb(15, 15, 12);
     padding: 5px;
     margin: 10px;
     font-size: 30px;
